# remote_project_deletion

./: LICENCE.md  README.md  pyproject.toml  setup.py
project_maintaining/: __init__.py  manager.py
